# mini-os

os_with_bootloader/: .gitIgnore  Cargo.toml
os_with_bootloader/kernel_with_bootloader/: Cargo.toml
os_with_bootloader/kernel_with_bootloader/src/: interrupts.rs  main.rs  writer.rs
os_with_bootloader/kernel_with_bootloader/src/writer/: constants.rs  main_pius.rs
os_with_bootloader/src/: main.rs
