[package]
name = "kernel_with_bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11.3"
x86_64 = "0.14.2"
noto-sans-mono-bitmap = "0.2.0" #for our framebuffer writer
spin = "0.5.2"
good_memory_allocator = "0.1.7"
# crossterm = "0.22.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]



